# New-project

./: .gitattributes  .gitignore  PROJECT_STATE.md  README.md  build.gradle  gradlew  gradlew.bat  pyproject.toml  settings.gradle
.github/workflows/: ci.yml
pst_mail_search/: cli.py  db.py  html_text.py  indexer.py  models.py  pst_reader.py  search.py
src/main/java/com/example/pstarchive/: Main.java
src/main/java/com/example/pstarchive/catalog/: CatalogDatabase.java  CatalogRepository.java  CatalogSchema.java
src/main/java/com/example/pstarchive/cli/: AddPstCommand.java  ArchiveCommand.java  BenchmarkSearchCommand.java  BuildSearchIndexCommand.java  CommandOutput.java  CompareSearchEnginesCommand.java  DiagnoseTextQualityCommand.java  DumpMessageRawCommand.java  EncodingProbeCommand.java  IndexFileCommand.java  IndexPstCommand.java  InitCommand.java  InspectStoreCommand.java  ListCommand.java  MarkStatusCommand.java  MovePstCommand.java  QualityReportCommand.java  SampleMessagesCommand.java  ScanFileCommand.java  ScanPstCommand.java  SearchStoreCommand.java  ShowCommand.java  ShowMessageCommand.java  (+2 more)
src/main/resources/: logback.xml
src/test/java/com/example/pstarchive/: BenchmarkSearchTest.java  CatalogPhase1Test.java  CompareSearchEnginesTest.java  EncodingProbeUtilityTest.java  Fts5IndexBuilderTest.java  JavaLibPstScannerIntegrationTest.java  PstIndexIntegrationTest.java  PstIndexStoreTest.java  PstScanUtilityTest.java  RiskyQueryDetectorTest.java  SearchStoreTest.java  StoreInspectionTest.java  TextQualityDiagnosticsTest.java
tests/: test_search.py
(+102 files in other folders)
